# connect-pro

./: .env.example  .gitignore  README.md  pyproject.toml
data/: example_linkedin_profile_1.json  example_linkedin_profile_2.json  example_linkedin_profile_3.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
src/connect_pro/: app.py  main.py
src/connect_pro/agent/: linkedin_profile_agent.py
src/connect_pro/api/: endpoints.py  schemas.py
src/connect_pro/config/: settings.py
src/connect_pro/llm/: models.py
src/connect_pro/prompts/: common_ground.py  profile_analysis.py
src/connect_pro/schemas/: profile_insights.py
src/connect_pro/scrapers/: scraping.md
src/connect_pro/scrapers/linkedin/: extractors.py  proxycurl.py  selenium_scraper.py
src/connect_pro/search/: tavily_search.py
