[tool.poetry]
name = "connect-pro"
version = "0.1.0"
description = ""
authors = ["Ruslan Yermakov <ruslan.yermakov@personal.com>"]
readme = "README.md"
packages = [{include = "connect_pro", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
langchain = "^0.3.14"
langchain-openai = "^0.2.14"
langchain-community = "^0.3.14"
langchainhub = "^0.1.21"
tavily-python = "^0.5.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
selenium = "^4.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
check_untyped_defs = true
